[workspace]
members = ["async-std-if", "macro"]

[package]
name = "async-if"
version = "0.1.0"
edition = "2021"

[features]
default = ["alloc"]
alloc = []
bumpalo = ["dep:bumpalo"]

[dependencies]
async-if-macro = { path = "macro" }
bumpalo = { version = "3.14", features = ["boxed"], optional = true }

[dev-dependencies]
tokio = { version = "1.35", features = ["macros", "rt", "time"] }
